# packages/aios-sdk/aios_sdk/_generated/models/connection.py
@@ -12,7 +12,6 @@ from ..types import UNSET, Unset
 
 if TYPE_CHECKING:
     from ..models.connection_metadata import ConnectionMetadata
-    from ..models.tool_spec import ToolSpec
 
 
 T = TypeVar("T", bound="Connection")
@@ -50,7 +49,6 @@ class Connection:
             updated_at (datetime.datetime):
             session_id (None | str | Unset):
             session_template_id (None | str | Unset):
-            tools (list[ToolSpec] | Unset):
             secrets_set (bool | Unset):  Default: False.
             attached_at (datetime.datetime | None | Unset):
             archived_at (datetime.datetime | None | Unset):
@@ -64,7 +62,6 @@ class Connection:
     updated_at: datetime.datetime
     session_id: None | str | Unset = UNSET
     session_template_id: None | str | Unset = UNSET
-    tools: list[ToolSpec] | Unset = UNSET
     secrets_set: bool | Unset = False
     attached_at: datetime.datetime | None | Unset = UNSET
     archived_at: datetime.datetime | None | Unset = UNSET
@@ -94,13 +91,6 @@ class Connection:
             session_template_id = UNSET
         else:
             session_template_id = self.session_template_id
-
-        tools: list[dict[str, Any]] | Unset = UNSET
-        if not isinstance(self.tools, Unset):
-            tools = []
-            for tools_item_data in self.tools:
-                tools_item = tools_item_data.to_dict()
-                tools.append(tools_item)
 
         secrets_set = self.secrets_set
 
@@ -136,8 +126,6 @@ class Connection:
             field_dict["session_id"] = session_id
         if session_template_id is not UNSET:
             field_dict["session_template_id"] = session_template_id
-        if tools is not UNSET:
-            field_dict["tools"] = tools
         if secrets_set is not UNSET:
             field_dict["secrets_set"] = secrets_set
         if attached_at is not UNSET:
@@ -150,7 +138,6 @@ class Connection:
     @classmethod
     def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
         from ..models.connection_metadata import ConnectionMetadata
-        from ..models.tool_spec import ToolSpec
 
         d = dict(src_dict)
         id = d.pop("id")
@@ -184,15 +171,6 @@ class Connection:
         session_template_id = _parse_session_template_id(
             d.pop("session_template_id", UNSET)
         )
-
-        _tools = d.pop("tools", UNSET)
-        tools: list[ToolSpec] | Unset = UNSET
-        if _tools is not UNSET:
-            tools = []
-            for tools_item_data in _tools:
-                tools_item = ToolSpec.from_dict(tools_item_data)
-
-                tools.append(tools_item)
 
         secrets_set = d.pop("secrets_set", UNSET)
 
@@ -239,7 +217,6 @@ class Connection:
             updated_at=updated_at,
             session_id=session_id,
             session_template_id=session_template_id,
-            tools=tools,
             secrets_set=secrets_set,
             attached_at=attached_at,
             archived_at=archived_at,
